--- a/vertexai-explainable-ai-in-bqml.ipynb
+++ b/vertexai-explainable-ai-in-bqml.ipynb
@@ -392,19 +392,10 @@
    "outputs": [],
    "source": [
     "#Enter the service account copied earlier; see example below\n",
-    "SERVICE_ACCOUNT = '<Enter >'  # @param {type:\"string\"}\n",
+    "SERVICE_ACCOUNT = '<Enter-your-service-account]'  # @param {type:\"string\"}\n",
     "\n",
     "#e.g.\n",
-    "SERVICE_ACCOUNT = '670723894630-compute@developer.gserviceaccount.com'  # @param {type:\"string\"}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SERVICE_ACCOUNT = \"[your-service-account]\""
+    "#SERVICE_ACCOUNT = '670723894630-compute@developer.gserviceaccount.com'  # @param {type:\"string\"}\n"
    ]
   },
   {
@@ -467,7 +458,7 @@
     "client = bigquery.Client()\n",
     "\n",
     "\n",
-    "dataset_id = \"{}.bqml1\".format(client.project)\n",
+    "dataset_id = \"{}.bqml\".format(client.project)\n",
     "# Construct a full Dataset object to send to the API.\n",
     "dataset = bigquery.Dataset(dataset_id)\n",
     "\n",
