--- a/vertexai-explainable-ai-in-bqml.ipynb
+++ b/vertexai-explainable-ai-in-bqml.ipynb
@@ -743,12 +743,12 @@
     "\n",
     "if TF[0] == \"2\":\n",
     "    if DEPLOY_GPU:\n",
-    "        DEPLOY_VERSION = \"tf2-gpu.{}\".format(TF)\n",
+    "        DEPLOY_VERSION = \"tf2-cpu.{}\".format(TF)\n",
     "    else:\n",
     "        DEPLOY_VERSION = \"tf2-cpu.{}\".format(TF)\n",
     "else:\n",
     "    if DEPLOY_GPU:\n",
-    "        DEPLOY_VERSION = \"tf-gpu.{}\".format(TF)\n",
+    "        DEPLOY_VERSION = \"tf-cpu.{}\".format(TF)\n",
     "    else:\n",
     "        DEPLOY_VERSION = \"tf-cpu.{}\".format(TF)\n",
     "\n",
@@ -1133,8 +1133,8 @@
     "# If DEPLOY_GPU is None, keeping gpu as no accelerator and accelerator_count as 0\n",
     "accelerator_count = 0\n",
     "if DEPLOY_GPU:\n",
-    "    gpu = DEPLOY_GPU.name\n",
-    "    accelerator_count = 1\n",
+    "    gpu = \"ACCELERATOR_TYPE_UNSPECIFIED\"# DEPLOY_GPU.name\n",
+    "    accelerator_count = 0 #1\n",
     "else:\n",
     "    gpu = \"ACCELERATOR_TYPE_UNSPECIFIED\"  # Unspecified accelerator type, which means no accelerator.\n",
     "    accelerator_count = 0\n",
