--- a/vertexai-explainable-ai-in-bqml.ipynb
+++ b/vertexai-explainable-ai-in-bqml.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NOTE:  \n",
+    "Instead of Tensorflow Enterprise, select Python3 (First option) while creating the Notebook.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "id": "copyright"
    },
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "id": "autoset_project_id"
    },
@@ -174,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project ID: ai-ml-meta-auto\n"
+      "Project ID: qwiklabs-gcp-03-832cc93f836c\n"
      ]
     }
    ],
@@ -219,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "id": "c1Rim3ogJ39j"
    },
@@ -253,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "id": "hdkr5x2jJ39k"
    },
@@ -281,11 +291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "bucket"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BUCKET_NAME:  student-04-f28e969fa364_20230314183145\n",
+      "BUCKET_URI:  gs://student-04-f28e969fa364_20230314183145\n"
+     ]
+    }
+   ],
    "source": [
     "BUCKET_NAME = \"\"+USER_NAME+\"_\"+TIMESTAMP # @param {type:\"string\"} \n",
     "BUCKET_URI = f\"gs://{BUCKET_NAME}\"\n",
@@ -297,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "autoset_bucket"
    },
@@ -318,20 +337,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "V97jQQuiJ39m"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating gs://student-04-f28e969fa364_20230314183145/...\n"
+     ]
+    }
+   ],
    "source": [
     "! gsutil mb -l $REGION $BUCKET_URI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying file://./feat_mortgage_data.csv [Content-Type=text/csv]...\n",
+      "/ [1 files][119.2 KiB/119.2 KiB]                                                \n",
+      "Operation completed over 1 objects/119.2 KiB.                                    \n"
+     ]
+    }
+   ],
    "source": [
     "!gsutil cp ./feat_mortgage_data.csv $BUCKET_URI"
    ]
@@ -347,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "id": "7PN6kSQtJ39m"
    },
@@ -356,12 +393,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         0  2022-09-07T01:15:57Z  gs://ai-ml-meta-auto-vertexai/bqml/#1662513357028893  metageneration=1\n",
-      " 135458194  2022-09-07T02:28:22Z  gs://ai-ml-meta-auto-vertexai/bqml/feat_mortgage_data.csv#1662517702860012  metageneration=1\n",
-      "    120575  2022-09-07T17:59:16Z  gs://ai-ml-meta-auto-vertexai/bqml/import_file.csv#1662573556324394  metageneration=1\n",
-      "                                 gs://ai-ml-meta-auto-vertexai/bqml/bq_query/\n",
-      "                                 gs://ai-ml-meta-auto-vertexai/bqml/bqmodel/\n",
-      "TOTAL: 3 objects, 135578769 bytes (129.3 MiB)\n"
+      "    122098  2023-03-14T18:32:13Z  gs://student-04-f28e969fa364_20230314183145/feat_mortgage_data.csv#1678818733712794  metageneration=1\n",
+      "TOTAL: 1 objects, 122098 bytes (119.24 KiB)\n"
      ]
     }
    ],
@@ -384,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "id": "M4WZi4CDJ39n",
     "tags": []
@@ -392,7 +425,7 @@
    "outputs": [],
    "source": [
     "#Enter the service account copied earlier; see example below\n",
-    "SERVICE_ACCOUNT = '<Enter-your-service-account]'  # @param {type:\"string\"}\n",
+    "SERVICE_ACCOUNT = '[Enter-your-service-account]'  # @param {type:\"string\"}\n",
     "\n",
     "#e.g.\n",
     "#SERVICE_ACCOUNT = '670723894630-compute@developer.gserviceaccount.com'  # @param {type:\"string\"}\n"
@@ -411,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "id": "mI3IJONMJ39n"
    },
@@ -420,10 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Omitting prefix \"gs://ai-ml-meta-auto-vertexai/bqml/\". (Did you mean to do iam -r?)\n",
-      "CommandException: No URLs matched. Do the files you're operating on exist?\n",
-      "Omitting prefix \"gs://ai-ml-meta-auto-vertexai/bqml/\". (Did you mean to do iam -r?)\n",
-      "CommandException: No URLs matched. Do the files you're operating on exist?\n"
+      "Grant Permissions to the service account\n"
      ]
     }
    ],
@@ -448,9 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created dataset qwiklabs-gcp-03-832cc93f836c.bqml\n",
+      "Loaded 1000 rows in BigQuery.\n"
+     ]
+    }
+   ],
    "source": [
     "from google.cloud import bigquery\n",
     "\n",
@@ -525,17 +564,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Ignore any warnings that might appear\n",
-    "\n",
-    "!pip install --quiet kfp==1.8.13"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -549,14 +577,14 @@
     }
    ],
    "source": [
-    "#Ignore any warnings that might appear\n",
+    "#Install Pipeline components under Console, use the below command.\n",
     "\n",
-    "! pip3 install --upgrade google-cloud-pipeline-components $USER_FLAG -q"
+    "#pip3 install -U google-cloud-pipeline-components\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "id": "import_aip:mbsdk"
    },
@@ -567,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "id": "import_kfp"
    },
@@ -578,6 +606,33 @@
     "from kfp import dsl\n",
     "from kfp.v2 import compiler\n",
     "from kfp.v2.dsl import HTML, Artifact, Condition, Input, Output, component\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "from google_cloud_pipeline_components.v1.bigquery import (\n",
+    "    BigqueryCreateModelJobOp, BigqueryEvaluateModelJobOp,\n",
+    "    BigqueryExportModelJobOp, BigqueryPredictModelJobOp,\n",
+    "    BigqueryQueryJobOp, BigqueryExplainPredictModelJobOp)\n",
+    "from google_cloud_pipeline_components.v1.endpoint import (EndpointCreateOp,\n",
+    "                                                          ModelDeployOp)\n",
+    "from google_cloud_pipeline_components.v1.model import ModelUploadOp\n",
+    "from kfp.v2.components import importer_node\n",
+    "\n",
+    "import kfp\n",
+    "print(kfp.__version__)"
    ]
   },
   {
@@ -593,35 +648,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "id": "r7p4Iv8_J39o"
    },
    "outputs": [],
    "source": [
     "from google.cloud import bigquery"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "import_tf"
-   },
-   "source": [
-    "#### Import TensorFlow\n",
-    "\n",
-    "Import the TensorFlow package into your Python environment."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "id": "_K5tP8oJJ39p"
-   },
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf"
    ]
   },
   {
@@ -637,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "id": "uAnLpS9cJ39p"
    },
@@ -659,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "id": "I9RloZo9J39p"
    },
@@ -689,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "id": "1-mE_7kXJ39p"
    },
@@ -701,7 +734,7 @@
     "        int(os.getenv(\"IS_TESTING_DEPLOY_GPU\")),\n",
     "    )\n",
     "else:\n",
-    "    DEPLOY_GPU, DEPLOY_NGPU = (aip.gapic.AcceleratorType.NVIDIA_TESLA_K80, 1)"
+    "    DEPLOY_GPU, DEPLOY_NGPU = (None, None)"
    ]
   },
   {
@@ -722,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {
     "id": "AmHM8whxJ39q"
    },
@@ -731,7 +764,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deployment: us-docker.pkg.dev/vertex-ai/prediction/tf2-gpu.2-5:latest AcceleratorType.NVIDIA_TESLA_K80\n"
+      "Deployment: us-docker.pkg.dev/vertex-ai/prediction/tf2-cpu.2-5:latest None\n"
      ]
     }
    ],
@@ -772,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {
     "id": "import_file:penguins,bq,lcn"
    },
@@ -785,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {
     "id": "LvND7iTpJ39r"
    },
@@ -1095,16 +1128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ai-ml-meta-auto.bqml.feat_mortgage_data'"
+       "'qwiklabs-gcp-03-832cc93f836c.bqml.feat_mortgage_data'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {
     "id": "l2FMs74-J39r"
    },
@@ -1124,8 +1157,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gpu= NVIDIA_TESLA_K80\n",
-      "accelerator_count= 1\n"
+      "gpu= ACCELERATOR_TYPE_UNSPECIFIED\n",
+      "accelerator_count= 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/kfp/v2/compiler/compiler.py:1293: FutureWarning: APIs imported from the v1 namespace (e.g. kfp.dsl, kfp.components, etc) will not be supported by the v2 compiler since v2.0.0\n",
+      "  category=FutureWarning,\n"
      ]
     }
    ],
@@ -1185,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1193,24 +1234,32 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920\n",
+      "PipelineJob created. Resource name: projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/mortgage-data-pipeline-new-20220929005920?project=670723894630\n",
-      "PipelineJob projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920 current state:\n",
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/mortgage-data-pipeline-new-20230314185042?project=890034739355\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
+      "PipelineState.PIPELINE_STATE_PENDING\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920 current state:\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920 current state:\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920 current state:\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920 current state:\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920 current state:\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
       "PipelineState.PIPELINE_STATE_RUNNING\n",
-      "PipelineJob run completed. Resource name: projects/670723894630/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20220929005920\n"
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "PipelineJob projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042 current state:\n",
+      "PipelineState.PIPELINE_STATE_RUNNING\n",
+      "PipelineJob run completed. Resource name: projects/890034739355/locations/us-central1/pipelineJobs/mortgage-data-pipeline-new-20230314185042\n"
      ]
     }
    ],
@@ -1284,9 +1333,9 @@
   },
   "environment": {
    "kernel": "python3",
-   "name": "tf2-gpu.2-8.m95",
+   "name": "common-cpu.m104",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-8:m95"
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m104"
   },
   "kernelspec": {
    "display_name": "Python 3",
